kubernetes/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: akarsx/my-client-image:latest
          imagePullPolicy: IfNotPresent
          name: client-cloud
      restartPolicy: Always
