kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o kubernetes/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
          -o kubernetes/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "yes"
          image: mysql:latest
          imagePullPolicy: ""
          name: db-cloud
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
status: {}
