kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o kubernetes/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
          -o kubernetes/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
            - name: NODE_ENV
              value: production
          image: akarsx/my-server-image:latest
          imagePullPolicy: ""
          name: server-cloud
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
