kubernetes/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: akarsx/my-server-image:latest
          imagePullPolicy: IfNotPresent
          name: server-cloud
      restartPolicy: Always
