kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o kubernetes/
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: client
  type: LoadBalancer
status:
  loadBalancer: {}
