kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
spec:
  ports:
    - nodePort: 30945
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: server
  type: NodePort
